--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build Addons
-        run: ./gradlew addonJar -PoutDir=../artifacts/
+        run: ./gradlew addonJar -PoutDir=artifacts
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
